@@ -34,6 +34,8 @@ TAG_HANDLER_BEGIN(SPAN, "SPAN" )
     TAG_HANDLER_PROC(tag)
     {
         wxColour oldclr = m_WParser->GetActualColor();
+        wxColour oldbackclr = m_WParser->GetActualBackgroundColor();
+        int oldbackmode = m_WParser->GetActualBackgroundMode();
         int oldsize = m_WParser->GetFontSize();
         int oldbold = m_WParser->GetFontBold();
         int olditalic = m_WParser->GetFontItalic();
@@ -53,6 +55,18 @@ TAG_HANDLER_BEGIN(SPAN, "SPAN" )
             {
                 m_WParser->SetActualColor(clr);
                 m_WParser->GetContainer()->InsertCell(new wxHtmlColourCell(clr));
+            }
+        }
+
+        str = styleParams.GetParam(wxS("background-color"));
+        if ( !str.empty() )
+        {
+            wxColour clr;
+            if ( wxHtmlTag::ParseAsColour(str, &clr) )
+            {
+                m_WParser->SetActualBackgroundColor(clr);
+                m_WParser->SetActualBackgroundMode(wxBRUSHSTYLE_SOLID);
+                m_WParser->GetContainer()->InsertCell(new wxHtmlColourCell(clr, wxHTML_CLR_BACKGROUND));
             }
         }
 
@@ -149,6 +163,15 @@ TAG_HANDLER_BEGIN(SPAN, "SPAN" )
             m_WParser->SetActualColor(oldclr);
             m_WParser->GetContainer()->InsertCell(
                 new wxHtmlColourCell(oldclr));
+        }
+
+        if (oldbackmode != m_WParser->GetActualBackgroundMode() ||
+            oldbackclr != m_WParser->GetActualBackgroundColor())
+        {
+            m_WParser->SetActualBackgroundMode(oldbackmode);
+            m_WParser->SetActualBackgroundColor(oldbackclr);
+            m_WParser->GetContainer()->InsertCell(
+                new wxHtmlColourCell(oldbackclr, oldbackmode == wxBRUSHSTYLE_TRANSPARENT ? wxHTML_CLR_TRANSPARENT_BACKGROUND : wxHTML_CLR_BACKGROUND));
         }
 
         return true;
